Add jpackage configuration and run script